# HARMONY-ARCHITETCURE-MODEL

./: .gitignore  README.md  deep-research-report.md
harmony-core/: CPU_TRAINING_PLAN.md  README.md  pyproject.toml  setup.py  training_evaluation_report.md
harmony-core/docs/: architecture.md  inference.md  training.md  training_scaling_roadmap.md
harmony-core/scripts/: eval.py  train.py
harmony-core/src/harmony/agents/: base_agent.py
harmony-core/src/harmony/backbone/: hierarchical_state.py  local_mixer.py  sparse_experts.py  state_backbone.py
harmony-core/src/harmony/config/: settings.py
harmony-core/src/harmony/embeddings/: __init__.py
harmony-core/src/harmony/evaluation/: __init__.py  evaluator.py
harmony-core/src/harmony/generation/: generator.py
harmony-core/src/harmony/memory/: README.md  consolidator.py  graph_memory.py  memory_manager.py
harmony-core/src/harmony/models/: harmony_model.py
harmony-core/src/harmony/planner/: README.md
harmony-core/src/harmony/prediction/: world_model.py
harmony-core/src/harmony/reasoning/: engine.py
harmony-core/src/harmony/retrieval/: fusion.py
harmony-core/src/harmony/tokenizer/: __init__.py
harmony-core/src/harmony/training/: README.md  (+1 more)
harmony-core/src/harmony_core.egg-info/: SOURCES.txt
harmony-core/tests/: conftest.py  test_agents.py  test_backbone.py  test_chunking.py  test_end_to_end.py  test_expansion.py  test_memory_advanced.py  test_phase_b.py  test_phase_c.py  test_planner_advanced.py  test_prediction.py  test_reasoning.py  test_tools.py  test_training_eval.py  test_verifier_advanced.py
(+40 files in other folders)
