[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony-core"
version = "0.1.0"
description = "HARMONY-Core v1: Adaptive computation sequence model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.3",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    "datasets>=2.12.0",
    "sentence-transformers>=2.2.2",
    "pypdf>=3.9.0",
    "python-docx>=0.8.11",
    "tqdm>=4.65.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
